[update]jvm垃圾回收